add usage info to readme