@@ -95,6 +95,134 @@ src/
     MTPFileSystemIntegrationTest.java
 ```
 
+## URI schema
+
+All MTP paths are addressed with URIs of the form:
+
+```
+mtp://<vendorId>:<productId>:<serial>/<storage>/<path...>
+```
+
+| Component | Description | Example |
+|-----------|-------------|---------|
+| `vendorId` | USB vendor ID (decimal) | `1949` |
+| `productId` | USB product ID (decimal) | `3`    |
+| `serial`   | Device serial string    | `ABC12345` |
+| `storage`  | Storage volume name     | `Internal Storage` |
+| `path`     | Path within the storage | `Music/song.mp3` |
+
+The path hierarchy mirrors the device structure:
+
+```
+mtp://1949:3:ABC12345/               ← device root (lists storages)
+mtp://1949:3:ABC12345/Internal Storage/          ← storage volume
+mtp://1949:3:ABC12345/Internal Storage/Music/    ← directory
+mtp://1949:3:ABC12345/Internal Storage/Music/song.mp3   ← file
+```
+
+Names containing spaces or other special characters are percent-encoded in the URI (e.g. `Internal%20Storage`), but `Path.toString()` always returns the decoded form.
+
+## Using melt-jfs in a Java program
+
+### 1. Find connected devices
+
+`MTPDeviceBridge` maintains the live device list. Call it once to enumerate what is attached:
+
+```java
+import org.meltzg.fs.mtp.MTPDeviceBridge;
+import org.meltzg.fs.mtp.types.MTPDeviceIdentifier;
+import org.meltzg.fs.mtp.types.MTPDeviceInfo;
+
+MTPDeviceBridge bridge = MTPDeviceBridge.getInstance();
+
+Map<MTPDeviceIdentifier, MTPDeviceInfo> devices = bridge.getDeviceInfo();
+for (var entry : devices.entrySet()) {
+    MTPDeviceIdentifier id = entry.getKey(); // "1949:3:ABC12345"
+    MTPDeviceInfo info    = entry.getValue();
+    System.out.println(id + " → " + info.friendlyName());
+}
+```
+
+### 2. Open a FileSystem
+
+Pass the device identifier in the URI. `FileSystems.newFileSystem` registers the filesystem for subsequent `Paths.get` calls.
+
+```java
+import java.net.URI;
+import java.nio.file.FileSystems;
+import java.nio.file.FileSystem;
+
+MTPDeviceIdentifier id = bridge.getDeviceConns().keySet().iterator().next();
+URI uri = URI.create("mtp://" + id + "/");
+
+try (FileSystem fs = FileSystems.newFileSystem(uri, null)) {
+    // use fs here
+}
+```
+
+### 3. Use standard NIO operations
+
+Once the filesystem is open, every `java.nio.file.Files` method works as-is — no MTP-specific API needed.
+
+**List storages and browse directories**
+
+```java
+Path root = fs.getPath("/");
+
+// List storage volumes
+try (DirectoryStream<Path> storages = Files.newDirectoryStream(root)) {
+    for (Path storage : storages) {
+        System.out.println(storage); // e.g. /Internal Storage
+    }
+}
+
+// Walk the whole device tree
+Files.walk(root).forEach(System.out::println);
+```
+
+**Read a file**
+
+```java
+Path song = fs.getPath("/Internal Storage/Music/song.mp3");
+byte[] bytes = Files.readAllBytes(song);
+```
+
+**Write a file**
+
+```java
+Path dest = fs.getPath("/Internal Storage/Notes/hello.txt");
+Files.write(dest, "hello".getBytes());
+```
+
+**Copy between a local path and the device**
+
+```java
+Path localFile  = Path.of("/tmp/photo.jpg");
+Path deviceFile = fs.getPath("/Internal Storage/DCIM/photo.jpg");
+
+// local → device
+Files.copy(localFile, deviceFile);
+
+// device → local
+Files.copy(deviceFile, Path.of("/tmp/copy.jpg"));
+```
+
+**Delete, move, create directories**
+
+```java
+Files.createDirectory(fs.getPath("/Internal Storage/NewFolder"));
+Files.move(deviceFile, fs.getPath("/Internal Storage/NewFolder/photo.jpg"));
+Files.delete(fs.getPath("/Internal Storage/NewFolder/photo.jpg"));
+```
+
+### JVM flags
+
+The FFM API requires the following flag, which the Gradle build sets automatically. If you invoke the JVM directly, add:
+
+```
+--enable-native-access=ALL-UNNAMED
+```
+
 ## Architecture notes
 
 ### Backend selection & injection
